2016-02-03  Charlie Zender  <zender@uci.edu>

	* Patch to copy attributes of coordinate variables in nces --nsm_grp (from Pedro)

2016-02-02  Charlie Zender  <zender@uci.edu>

	* Make code MSVC-proof by allocating arrays only from compile-time constants

	* Annotate mdl_1.cdl to verify whether nces, ncbo, ncra propagate coordinate and non-coordinate metadata to output

2016-01-30  Charlie Zender  <zender@uci.edu>

	* ncremap: Change default algorithm back to ESMF bilinear, which works for all Feng's cases

2016-01-28  Charlie Zender  <zender@uci.edu>

	* Improve ncatted quick help screen

2016-01-27  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.5-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.5-alpha05 final changes';git push
	git tag -a 4.5.5-alpha05 -m 'Version 4.5.5-alpha05 new features: CCW detection/correction';git push --tags

2016-01-25  Charlie Zender  <zender@uci.edu>

	* Cover most parameter space for tricky quadrilateral inputs by	calling nco_ccw_chk() recursively

	* Mark --enable-esmf as developmental switch to be avoided

	* ncremap correctly handle simultaneous -O drc_out -o fl_out switches

	* Notate oft-need antlr post-processing perl script command

2016-01-24  Charlie Zender  <zender@uci.edu>

	* Implement "cheesy" patch that inverts CW quadrilaterals to make them CCW so Tempest can read them
	Patch succeeds in making all grids CCW (according to NCO) though Tempest occasionally disagrees

2016-01-24  Henry Butowsky  <henryb@hush.com>

	* ncap2 first cut to grammar file of code for hyperslabbing attributes on LHS and RHS

	* First version of push() method for attributes

2016-01-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Versqion 4.5.5-alpha04 final changes';git push
	git tag -a 4.5.5-alpha04 -m 'Version 4.5.5-alpha04 new features: ncremap -j job_nbr';git push --tags

	* Add parallelism tuning with ncremap -j job_nbr where job_nbr is number of simultaneous jobs
