@@ -897,12 +897,12 @@ Thanks to NSF for supporting AIX machines at NCAR over the years.
 NCO packages in the Debian/Ubuntu repositories (i.e., Sid and Raring) generally lag the packages distributed here by 6&ndash;12 months.
 <a name="beta"></a><a name="prerelease"> <!-- http://nco.sf.net#beta -->
 Newer (beta- or pre-release) packages are often available for intrepid Debian/Ubuntu users as described <a href="https://github.com/nco/nco/tree/master/doc/beta.txt">here</a>.
-<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_4.5.2-1_i386.deb</tt>&rsquo;):</dt>
-<li><a href="src/nco_4.5.2-1_amd64.deb">nco_4.5.2-1_amd64.deb</a> (<!--#fsize file="src/nco_4.5.2-1_amd64.deb"-->): Executables AMD64-compatible (last updated <!--#flastmod file="src/nco_4.5.2-1_amd64.deb"-->)</li>
-<li><a href="src/nco_4.5.2-1.dsc">nco_4.5.2-1.dsc</a> (<!--#fsize file="src/nco_4.5.2-1.dsc"-->): Description (last updated <!--#flastmod file="src/nco_4.5.2-1.dsc"-->)</li>
-<li><a href="src/nco_4.5.2-1_amd64.changes">nco_4.5.2-1_amd64.changes</a> (<!--#fsize file="src/nco_4.5.2-1_amd64.changes"-->): Changes since last deb package (last updated <!--#flastmod file="src/nco_4.5.2-1_amd64.changes"-->)</li>
-<li><a href="src/nco_4.5.2.orig.tar.gz">nco_4.5.2.orig.tar.gz</a> (<!--#fsize file="src/nco_4.5.2.orig.tar.gz"-->): Upstream Source (last updated <!--#flastmod file="src/nco_4.5.2.orig.tar.gz"-->)</li>
-<li><a href="src/nco_4.5.2-1.diff.gz">nco_4.5.2-1.diff.gz</a> (<!--#fsize file="src/nco_4.5.2-1_amd64.changes"-->): Debian patch to upstream source (last updated <!--#flastmod file="src/nco_4.5.2-1_amd64.changes"-->)</li>
+<dt>Debian package for most recent NCO release (install with, e.g., &lsquo;<tt>dpkg --install nco_4.5.4-1_i386.deb</tt>&rsquo;):</dt>
+<li><a href="src/nco_4.5.4-1_amd64.deb">nco_4.5.4-1_amd64.deb</a> (<!--#fsize file="src/nco_4.5.4-1_amd64.deb"-->): Executables AMD64-compatible (last updated <!--#flastmod file="src/nco_4.5.4-1_amd64.deb"-->)</li>
+<li><a href="src/nco_4.5.4-1.dsc">nco_4.5.4-1.dsc</a> (<!--#fsize file="src/nco_4.5.4-1.dsc"-->): Description (last updated <!--#flastmod file="src/nco_4.5.4-1.dsc"-->)</li>
+<li><a href="src/nco_4.5.4-1_amd64.changes">nco_4.5.4-1_amd64.changes</a> (<!--#fsize file="src/nco_4.5.4-1_amd64.changes"-->): Changes since last deb package (last updated <!--#flastmod file="src/nco_4.5.4-1_amd64.changes"-->)</li>
+<li><a href="src/nco_4.5.4.orig.tar.gz">nco_4.5.4.orig.tar.gz</a> (<!--#fsize file="src/nco_4.5.4.orig.tar.gz"-->): Upstream Source (last updated <!--#flastmod file="src/nco_4.5.4.orig.tar.gz"-->)</li>
+<li><a href="src/nco_4.5.4-1.diff.gz">nco_4.5.4-1.diff.gz</a> (<!--#fsize file="src/nco_4.5.4-1_amd64.changes"-->): Debian patch to upstream source (last updated <!--#flastmod file="src/nco_4.5.4-1_amd64.changes"-->)</li>
 Thanks to Daniel Baumann, Barry deFreese, Francesco Lovergine, 
 Brian Mays, Rorik Peterson, and Matej Vela for their help packaging
 NCO for Debian over the years. 
@@ -1144,11 +1144,11 @@ site.</li>
 The simplest way to acquire the source is to download the compressed tarball:
 <ul>
 <li>
-<!-- scp ${DATA}/nco-4.5.2.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src -->
-<a href="src/nco-4.5.2.tar.gz">nco-4.5.2.tar.gz</a> 
-(<!--#fsize file="src/nco-4.5.2.tar.gz"--> compressed tar-file)<br>
-<!--#exec cmd="openssl dgst -md5 src/nco-4.5.2.tar.gz"--><br>
-<!--#exec cmd="openssl dgst -sha1 src/nco-4.5.2.tar.gz"--> 
+<!-- scp ${DATA}/nco-4.5.4.tar.gz zender,nco@web.sf.net:/home/project-web/nco/htdocs/src -->
+<a href="src/nco-4.5.4.tar.gz">nco-4.5.4.tar.gz</a> 
+(<!--#fsize file="src/nco-4.5.4.tar.gz"--> compressed tar-file)<br>
+<!--#exec cmd="openssl dgst -md5 src/nco-4.5.4.tar.gz"--><br>
+<!--#exec cmd="openssl dgst -sha1 src/nco-4.5.4.tar.gz"--> 
 </li>
 </ul>
 
