@@ -1,3 +1,9 @@
+2016-02-07  Charlie Zender  <zender@uci.edu>
+
+	* Implement back-compatible NC_VERSION tokens in nco_netcdf.h
+
+	* Tweak ncremap defaults: tps_opt=mono, rgr_opt += --rnr=0.0
+
 2016-02-03  Charlie Zender  <zender@uci.edu>
 
 	* Patch to copy attributes of coordinate variables in nces --nsm_grp (from Pedro)
